# barista

./: .gitignore  Cargo.toml  Makefile.toml  README.md  bootstrap.js  build-web.sh  example.yml  package.json  shell.nix  webpack.config.js
barista/: Cargo.toml
barista-cli/: Cargo.toml
barista-cli/src/: main.rs
barista-daemon/: Cargo.toml
barista-daemon/src/: main.rs  server.rs
barista-web/: Cargo.toml
barista-web/sass/: gruvbox.sass  index.sass
barista-web/src/: lib.rs  server.rs
barista-web/static/: index.html
barista/src/: config.rs  server.rs
cli/: Cargo.toml
cli/src/: main.rs
cocoa/: Cargo.toml
cocoa/src/: command.rs  lib.rs
menu/: Cargo.toml  bootstrap.js  package.json  webpack.config.js
menu/src/: lib.rs  server.rs
menu/static/: index.html
minectl/: Cargo.toml
mined/: Cargo.toml
mined/src/: main.rs  routes.rs  server.rs
minelib/: Cargo.toml
minelib/src/: command.rs  config.rs  server.rs
mineweb/: Cargo.toml  package.json  webpack.config.js
mineweb/sass/: index.sass
mineweb/src/: lib.rs  server.rs
mineweb/static/: index.css
nix/: rust.nix  sources.json
serve/: Cargo.toml
serve/src/: lib.rs  server.rs
