[package]
name = "barista-daemon"
version = "0.1.0"
authors = ["Aamaruvi Yogamani <38222826+Technical27@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/technical27/barista"
license = "MIT OR Apache-2.0"
description = "a daemon to contorl minecraft servers"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
futures = "0.3.8"
serde_cbor = "0.11.1"
barista = { path = "../barista" }
clap = "2.33.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
log = "0.4.11"
pretty_env_logger = "0.4.0"

[target.'cfg(unix)'.dependencies]
nix = "0.19.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
