[package]
name = "barista-web"
version = "0.1.0"
authors = ["Aamaruvi Yogamani <38222826+Technical27@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/technical27/barista"
license = "MIT OR Apache-2.0"
description = "the web interface to barista-daemon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
yew-router = "0.14.0"
wasm-bindgen = "0.2.69"
barista = { path = "../barista" }
web-sys = { version = "0.3.46", features = ["BinaryType", "MessageEvent", "WebSocket"] }
js-sys = "0.3.46"
serde_cbor = "0.11.1"
log = "0.4.11"
# web_logger = "0.2.0"
