[package]
name = "mined"
version = "0.1.0"
authors = ["Aamaruvi Yogamani <38222826+Technical27@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/technical27/minecraft"
license = "MIT OR Apache-2.0"
description = "a daemon to contorl minecraft servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
futures = "0.3.5"
serde_cbor = "0.11.1"
minelib = { path = "../minelib" }
clap = "2.33.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.12"
log = "0.4.8"
pretty_env_logger = "0.4.0"

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"

[target.'cfg(windows)'.dependencies]
windows = "0.3.8"
